# counting-coins

./: CoinyCount-init-db.ipynb  CoinyCount.ipynb  main.spec
.github/workflows/: main.yml
src/: build.spec  counting.py  pyproject.toml  requirements.txt
